[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "timberborn-http"
version = "0.0.5"
authors = [
  { name="Agroqirax", email="124404386+Agroqirax@users.noreply.github.com" },
]
description = "Timberborn http api wrapper"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "requests",
    "flask"
]

[project.urls]
Homepage = "https://github.com/agroqirax/timberborn-http"
Issues = "https://github.com/agroqirax/timberborn-http/issues"